feat: Implement customer registration functionality with validation and request handling